Added django rest auth
