# backend/user/views.py
@@ -1,9 +1,10 @@
-from django.shortcuts import render
-from rest_framework.views import APIView
 from rest_framework import permissions
 from rest_framework.response import Response
-from .models import UserSerializer
+from rest_framework.views import APIView
 from drf_yasg.utils import swagger_auto_schema
+from .models import UserSerializer
+from allauth.socialaccount.providers.google.views import GoogleOAuth2Adapter
+from rest_auth.registration.views import SocialLoginView
 
 class UserView(APIView):
     permission_classes = [permissions.IsAuthenticated]
@@ -16,4 +17,5 @@ class UserView(APIView):
     def get(self, request, format=None):
         return Response(UserSerializer(request.user).data)
 
-
+class GoogleLogin(SocialLoginView):
+    adapter_class = GoogleOAuth2Adapter
